--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ button {
 
 .primaryButton {
   cursor: pointer;
-  background: #00cc66;
+  background: #e85602;
   border-radius: 1rem;
   padding: 0.85rem 2rem;
   color: #ffffff;
@@ -122,7 +122,7 @@ button {
   width: 64px;
   height: 64px;
   border: 8px solid;
-  border-color: #00cc66 transparent #00cc66 transparent;
+  border-color: #e85602 transparent #e85602 transparent;
   border-radius: 50%;
   animation: spin 1.2s linear infinite;
 }
@@ -214,7 +214,7 @@ button {
 
 .forgotPasswordLink {
   cursor: pointer;
-  color: #00cc66;
+  color: #e85602;
   font-weight: 600;
   text-align: right;
 }
@@ -254,7 +254,7 @@ button {
   align-items: center;
   width: 3rem;
   height: 3rem;
-  background-color: #00cc66;
+  background-color: #e85602;
   border-radius: 50%;
 }
 @media (min-width: 1024px) {
@@ -291,7 +291,7 @@ button {
 
 .registerLink {
   margin-top: 4rem;
-  color: #00cc66;
+  color: #e85602;
   font-weight: 600;
   text-align: center;
   margin-bottom: 3rem;
@@ -452,7 +452,7 @@ button {
   margin-top: 0.5rem;
   font-weight: 600;
   font-size: 1.1rem;
-  color: #00cc66;
+  color: #e85602;
   margin-bottom: 0;
   display: flex;
   align-items: center;
@@ -525,7 +525,7 @@ button {
 
 .listingType {
   padding: 0.25rem 0.5rem;
-  background-color: #00cc66;
+  background-color: #e85602;
   color: #ffffff;
   border-radius: 2rem;
   display: inline;
@@ -626,7 +626,7 @@ button {
   font-size: 1rem;
   font-weight: 600;
   color: #ffffff;
-  background-color: #00cc66;
+  background-color: #e85602;
   padding: 0.25rem 0.75rem;
   border-radius: 1rem;
 }
@@ -644,7 +644,7 @@ button {
 .changePersonalDetails {
   cursor: pointer;
   font-weight: 600;
-  color: #00cc66;
+  color: #e85602;
 }
 
 .profileCard {
@@ -739,7 +739,7 @@ button {
   align-items: center;
 }
 .formButtonActive {
-  background-color: #00cc66;
+  background-color: #e85602;
   color: #ffffff;
 }
 
@@ -794,7 +794,7 @@ button {
   width: 100%;
 }
 .formInputFile::-webkit-file-upload-button {
-  background-color: #00cc66;
+  background-color: #e85602;
   border: none;
   color: #ffffff;
   font-weight: 600;
